# calculator

./: .gitignore  CHANGELOG.md  pyproject.toml
src/: main.py
src/my_calc/: __init__.py
src/my_calc.egg-info/: PKG-INFO  SOURCES.txt
src/my_calc/advanced/: sine.py
src/my_calc/basic/: add.py  mul.py  sub.py
