[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_calc"
version = "0.2.1"
dependencies = [
    "requests>=2.25.0",  # Minimum version required
    "numpy>=1.21.0",     # Must have numpy 1.21 or higher
    "pandas",            # No version constraint (gets latest)
]
description = "0.2.1 is where numpy is a package build time dependency"
authors = [
    {name = "Ayush Dev", email = "ayush.dev@telaverge.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers =  [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["my_calc", "my_calc.advanced", "my_calc.basic"]
package-dir = {"" = "src"}